--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>exchange-rates-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>exchange-rates-service</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Exchange rates service</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
