Configuring connection to SQL Server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+db.url=jdbc:sqlserver://localhost:1433;applicationName=${db.applicationname};sendStringParametersAsUnicode=false;enablePrepareOnFirstPreparedStatementCall=false;disableStatementPooling=true;encrypt=false
+db.applicationname=exchange_rates_service
+db.login=Jakub
+db.password=1234567890
